Added checkboxes for export data page and added reset image popup, if userInput null

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,3 +14,4 @@
 @import url("/static/css/footer.css");
 @import url("/static/css/load-spinner.css");
 @import url("/static/css/popups.css");
+@import url("/static/css/checkbox.css");
