--- a/templates/export.html
+++ b/templates/export.html
@@ -1,7 +1,68 @@
 {% extends "base.html" %} {% block body %}
 <h1>Export page</h1>
-<div>
-  <!-- Filter options -->
+<div class="options-box" id="options">
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Rarity</span>
+  </label>
+  
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Price</span>
+  </label>
+  
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Time</span>
+  </label>
+  
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Location</span>
+  </label>
+  
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Size</span>
+  </label>
+
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Months (NH)</span>
+  </label>
+  
+  <label class="checkbox-wrapper blur-group">
+    <div class="check-container">
+      <input type="checkbox" checked="checked" />
+      <div class="line"></div>
+      <div class="line line-indicator"></div>
+    </div>
+    <span class="checkbox-text">Months (SH)</span>
+  </label>
 </div>
 <div>
   <!-- Export options -->
